Exchange log4j with reload4j. Switch most log4j Logger to slf4j Logger.